--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,15 @@ article section p b {
     color: var(--color-text-primary);
 }
 
+.section-divider {
+    width: 100%;
+    height: 16px;
+    flex-shrink: 0;
+    background-image: url('./assets/icons/section-divider.svg');
+    background-repeat: repeat-x;
+    background-position: center;
+}
+
 footer {
     background-color: var(--color-text-primary);
     justify-content: center;
@@ -97,7 +106,7 @@ footer {
 
 #uade-logo {
     width: 100px;
-    margin: 8rem 0;
+    margin: 8rem 0 9rem 0;
 }
 
 a {
